# vending_bench

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude/: settings.skill-lockdown.example.json
.claude/skills/play-vending-bench/: SKILL.md
.claude/skills/vending-bench/: SKILL.md
docs/: Vending-Bench 2 _ Andon Labs.md
results/: run_haiku_1.json  run_haiku_2.json
scripts/: visualize_runs.py
src/vending_bench/: __init__.py  config.py  mcp_server.py  scoring.py  skill_run.py
src/vending_bench/agent/: llm.py  loop.py  memory.py  prompts.py  session.py
src/vending_bench/cli/: repl.py  tool.py
src/vending_bench/env/: clock.py  events.py  ledger.py  machine.py  mailbox.py  models.py  orders.py  sales.py  storage.py  weather.py  world.py
src/vending_bench/env/suppliers/: base.py  catalog.py  llm_based.py  rule_based.py
src/vending_bench/mcp/: __init__.py  server.py
src/vending_bench/tools/: api.py  schema.py
tests/: test_agent.py  test_env_core.py  test_mcp_server.py  test_repl.py  test_sales.py  test_scoring.py  test_suppliers.py  test_suppliers_llm.py  test_tools.py
