[project]
name = "vending-bench"
version = "0.1.0"
description = "Vending-Bench 2 風シミュレーション環境（自作）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vb-play = "vending_bench.cli.repl:main"
vb-run = "vending_bench.agent.loop:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
viz = [
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vending_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
